time limit etc.

--- a/dreamerv3-torch/configs.yaml
+++ b/dreamerv3-torch/configs.yaml
@@ -130,7 +130,7 @@ crafter:
   imag_gradient: 'reinforce'
 
 atari100k:
-  steps: 4e5
+  steps: 40e5
   envs: 1
   action_repeat: 4
   train_ratio: 1024
@@ -138,12 +138,13 @@ atari100k:
   eval_episode_num: 100
   actor: {dist: 'onehot', std: 'none'}
   imag_gradient: 'reinforce'
-  stickey: False
+  sticky: False
   lives: unused
   noops: 30
   resize: opencv
   actions: needed
-  time_limit: 108000
+  #time_limit: 108000
+  time_limit: 20_000
 
 minecraft:
   task: minecraft_diamond
